Update to reflect Username change

--- a/Settings-Icons.css
+++ b/Settings-Icons.css
@@ -21,7 +21,7 @@
 
 /*User Settings*/
 /*[aria-controls="powermode-settings-tab"].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/user-settings/powermode.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/user-settings/powermode.svg);
 }*/
 [class="poggermodeIcon-3Z9uYf"] {
   content: "";
@@ -32,64 +32,64 @@
   margin-top: -2px;
 }
 [aria-label="My Account"].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/user-settings/my-account.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/user-settings/my-account.svg);
 }
 [aria-label="User Profile"].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/user-settings/user-profile.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/user-settings/user-profile.svg);
 }
 [aria-controls="privacy-&-safety-tab"].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/user-settings/privacy-safety.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/user-settings/privacy-safety.svg);
 }
 [aria-controls=authorized-apps-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/user-settings/authorized-apps.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/user-settings/authorized-apps.svg);
 }
 [aria-controls=connections-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/user-settings/connections.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/user-settings/connections.svg);
 }
 
 /*Payment Settings*/
 [aria-controls=subscriptions-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/payment-settings/subscriptions.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/payment-settings/subscriptions.svg);
 }
 [aria-controls=discord-nitro-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/payment-settings/discord-nitro.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/payment-settings/discord-nitro.svg);
 }
 [class="background-Gjdjzm selectedBackground-1t6xXq"] {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/payment-settings/discord-nitro.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/payment-settings/discord-nitro.svg);
   background-repeat: no-repeat;
   background-position: 15px;
 }
 [aria-controls=nitro-server-boost-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/payment-settings/server-boost.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/payment-settings/server-boost.svg);
 }
 [aria-controls=library-inventory-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/payment-settings/gift-inventory.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/payment-settings/gift-inventory.svg);
 }
 [aria-controls=billing-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/payment-settings/billing.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/payment-settings/billing.svg);
 }
 
 /*App Settings*/
 [aria-controls=appearance-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/app-settings/appearance.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/app-settings/appearance.svg);
 }
 [aria-controls=accessibility-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/app-settings/accessibility.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/app-settings/accessibility.svg);
 }
 [aria-controls="voice-&-video-tab"].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/app-settings/voice-%26-video.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/app-settings/voice-%26-video.svg);
 }
 [aria-controls="text-&-images-tab"].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/app-settings/text-%26-images.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/app-settings/text-%26-images.svg);
 }
 [aria-controls=notifications-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/app-settings/notifications.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/app-settings/notifications.svg);
 }
 [aria-controls=keybinds-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/app-settings/keybinds.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/app-settings/keybinds.svg);
 }
 [aria-controls=language-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/app-settings/language.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/app-settings/language.svg);
 }
 [aria-controls=windows-tab].item-3XjbnG:before {
   background-image: url(https://clearvision.gitlab.io/icons/windows.svg);
@@ -98,58 +98,58 @@
   background-image: url(https://clearvision.gitlab.io/icons/linux.svg);
 }
 [aria-controls=streamer-mode-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/app-settings/streamer-mode.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/app-settings/streamer-mode.svg);
 }
 [aria-controls=advanced-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/app-settings/advanced.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/app-settings/advanced.svg);
 }
 
 /*Activity Settings*/
 [aria-controls=game-activity-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/activity-settings/activity-status.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/activity-settings/activity-status.svg);
 }
 [aria-controls=overlay-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/activity-settings/game-overlay.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/activity-settings/game-overlay.svg);
 }
 
 /*BetterDiscord*/
 [aria-controls=settings-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/betterdiscord/settings.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/betterdiscord/settings.svg);
 }
 [aria-controls=emotes-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/betterdiscord/emotes.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/betterdiscord/emotes.svg);
 }
 [aria-controls=customcss-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/betterdiscord/custom-css.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/betterdiscord/custom-css.svg);
 }
 [aria-controls=plugins-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/betterdiscord/plugins.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/betterdiscord/plugins.svg);
 }
 [aria-controls=themes-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/betterdiscord/themes.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/betterdiscord/themes.svg);
 }
 [aria-controls=pluginrepo-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/betterdiscord/plugin-repo.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/betterdiscord/plugin-repo.svg);
 }
 [aria-controls=themerepo-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/betterdiscord/theme-repo.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/betterdiscord/theme-repo.svg);
 }
 
 /*Rest*/
 [aria-controls=changelog-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/misc/changelog.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/misc/changelog.svg);
 }
 [aria-controls=hypesquad-online-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/misc/hypesquad.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/misc/hypesquad.svg);
 }
 [aria-controls=experiments-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/misc/experiments.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/misc/experiments.svg);
 }
 [aria-controls=developer-options-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/misc/developer-options.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/misc/developer-options.svg);
 }
 [aria-controls=hotspot-options-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/misc/hotspot-options.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/misc/hotspot-options.svg);
 }
 [aria-controls=payment-flow-modals-tab].item-3XjbnG{
   padding-left: 17px !important;
@@ -180,12 +180,12 @@
   color: #FFFFFF;
 }
 [aria-controls=dismissible-content-options-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/misc/dismissible-content.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/misc/dismissible-content.svg);
 }
 
 /*Log Out*/
 [aria-controls=logout-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/icons/misc/logout.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/icons/misc/logout.svg);
 }
 
 .icon-Zc-uZZ,
@@ -198,54 +198,54 @@
 
 /*General*/
 [aria-controls=overview-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/general/overview.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/general/overview.svg);
 }
 [aria-controls=roles-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/general/roles.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/general/roles.svg);
 }
 [aria-controls=emoji-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/general/emoji.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/general/emoji.svg);
 }
 [aria-controls=stickers-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/general/sticker.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/general/sticker.svg);
 }
 [aria-controls=moderation-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/general/moderation.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/general/moderation.svg);
 }
 [aria-controls=audit_log-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/general/audit-log.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/general/audit-log.svg);
 }
 [aria-controls=integrations-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/general/integrations.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/general/integrations.svg);
 }
 [aria-controls=widget-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/general/widget.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/general/widget.svg);
 }
 [aria-controls=guild_templates-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/general/templates.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/general/templates.svg);
 }
 
 /*Community*/
 [aria-controls=community-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/community/overview.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/community/overview.svg);
 }
 [aria-controls=analytics-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/community/server-insights.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/community/server-insights.svg);
 }
 [aria-controls=partner-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/community/partner-program.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/community/partner-program.svg);
 }
 [aria-controls=discovery-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/community/discovery.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/community/discovery.svg);
 }
 [aria-controls=community_welcome-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/community/welcome-screen.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/community/welcome-screen.svg);
 }
 [aria-controls=threads-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/community/threads.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/community/threads.svg);
 }
 [aria-controls=guild_premium-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/community/server-boost-status.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/community/server-boost-status.svg);
 }
 
 /*Member Verification Tab*/
@@ -273,39 +273,39 @@
   color: #FFFFFF;
 }
 [aria-controls=member_verification-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/community/membership-screening.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/community/membership-screening.svg);
 }
 
 /*User Management*/
 [aria-controls=members-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/user-management/members.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/user-management/members.svg);
 }
 [aria-controls=instant_invites-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/user-management/invites.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/user-management/invites.svg);
 }
 [aria-controls=bans-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/user-management/bans.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/user-management/bans.svg);
 }
 
 [aria-controls=delete-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/user-management/delete-server.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/user-management/delete-server.svg);
 }
 
 /*CHANNEL SETTINGS'*/
 
 [aria-controls=overview-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/general/overview.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/general/overview.svg);
 }
 [aria-controls=permissions-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/general/channel-permissions.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/general/channel-permissions.svg);
 }
 [aria-controls=instant_invites-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/user-management/invites.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/user-management/invites.svg);
 }
 [aria-controls=integrations-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/general/integrations.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/general/integrations.svg);
 }
 [aria-controls=delete-tab].item-3XjbnG:before {
-  background-image: url(https://randomfly1.github.io/Settings-Icons/server/user-management/delete-server.svg);
+  background-image: url(https://goodname15.github.io/Settings-Icons/server/user-management/delete-server.svg);
 }
 
